--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -6,5 +6,6 @@
   "bracketSpacing": true,
   "jsxSingleQuote": true,
   "endOfLine": "lf",
-  "printWidth": 80
+  "printWidth": 80,
+  "jsxBracketSameLine": true
 }
